--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,190 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Pinyon+Script&family=Playfair+Display:wght@400;500;700&family=Roboto+Slab:wght@100;200;300;400;500;600&family=Ubuntu:ital,wght@0,300;1,300&display=swap');
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --color-bg: #000000;
+  --color-bg-variant: #43000b;
+  --color-primary: #bf0f30;
+  --color-primary-variant: #95001b;
+  --color-light: #736868;
+  --color-white: #c6b2b2;
+  --color-dark: #0000002d;
+
+  --transition: all 400ms ease;
+
+  --container-width-lg: 75%;
+  --container-width-md: 86%;
+  --container-width-sm: 90%;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+h1,
+h2,
+h5 {
+  font-family: 'Playfair Display', serif;
+}
+
+small {
+  font-family: 'Ubuntu', sans-serif;
+}
+
+body {
+  font-family: 'Roboto Slab', serif;
+  background: radial-gradient(black 15%, transparent 16%) 0 0,
+    radial-gradient(black 15%, transparent 16%) 4px 4px,
+    radial-gradient(rgba(255, 255, 255, 0.1) 15%, transparent 20%) 0 1px,
+    radial-gradient(rgba(255, 255, 255, 0.1) 15%, transparent 20%) 4px 5px;
+  background-color: #151515;
+  background-size: 8px 8px;
+  color: var(--color-primary);
+  line-height: 1.7;
+}
+
+.container {
+  width: var(--container-width-lg);
+  margin: 0 auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: 300;
+}
+
+h1 {
+  font-size: 3 rem;
+}
+
+h5 {
+  font-size: 0.2 rem;
+}
+
+span {
+  color: var(--color-primary);
+  font-weight: 500;
+  display: inline-block;
+  position: relative;
+}
+span:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--color-primary);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+span:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+section {
+  margin-top: 8rem;
+}
+
+section > h2,
+section > h5 {
+  text-align: center;
+  color: var(--color-primary);
+}
+
+section > h2 {
+  color: var(--color-white);
+  margin-bottom: 3rem;
+}
+
+.text-light {
+  color: var(--color-light);
+}
+
+a {
+  color: var(--color-primary);
+  transition: var(--transition);
+}
+
+a:hover {
+  color: var(--color-white);
+}
+
+.title {
+  font-size: 3rem;
+
+  padding-top: 8rem;
+  color: var(--color-primary);
+}
+
+.btn {
+  background-color: transparent;
+  width: max-content;
+  display: inline-block;
+  color: var(--color-primary);
+  padding: 0.5rem 0.9rem;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  border: 1px solid var(--color-primary-variant);
+  transition: var(--transition);
+}
+
+.btn__icons {
+  vertical-align: middle;
+}
+
+.btn:hover {
+  background: var(--color-primary);
+  color: var(--color-bg);
+}
+
+.btn-primary {
+  background: var(--color-primary);
+  color: var(--color-bg);
+}
+
+img {
+  display: block;
+  width: 100%;
+  object-fit: cover;
+}
+
+/* media queries (tablet) */
+@media screen and (max-width: 1024px) {
+  .container {
+    width: var(--container-width-md);
+  }
+
+  section {
+    margin-top: 6rem;
+  }
+}
+
+/* media queries (mobile) */
+@media screen and (max-width: 600px) {
+  .container {
+    width: var(--container-width-sm);
+  }
+
+  section > h2 {
+    margin-bottom: 2rem;
+  }
 }
