--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   --color-bg: #000000;
   --color-bg-variant: #43000b;
   --color-primary: #bf0f30;
+  --color-primary-light: #f10934;
   --color-primary-variant: #95001b;
   --color-light: #736868;
   --color-white: #c6b2b2;
