--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -34,6 +34,13 @@
   margin-left: -58%;
   width: 350px;
 }
+
+.portfolioTitle {
+  padding: 3rem 0;
+}
+.portfolioTitle h1 {
+  font-size: 2.5rem;
+}
 .portfolio__card small {
   margin: 0;
 }
